// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`input > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off" aria-label="Aria label">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with as correctly 1`] = `
"<section data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`input > renders with avatar and leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with avatar and trailingIcon correctly 1`] = `"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span></div>"`;

exports[`input > renders with avatar correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with class correctly 1`] = `
"<div data-slot="root" class="absolute"><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with default slot correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">Default slot
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with disabled correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" disabled="" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with file type correctly 1`] = `
"<div data-slot="root" class=""><input type="file" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with icon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with id correctly 1`] = `
"<div data-slot="root" class=""><input id="id" type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with leading and icon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with leading slot correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class="">Leading slot</span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with loading and avatar correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with loading correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with loading trailing and avatar correctly 1`] = `"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><span data-slot="trailing" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="trailingIcon"></span></span></div>"`;

exports[`input > renders with loading trailing correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`input > renders with loadingIcon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off"><span data-slot="leading" class=""><span class="iconify i-lucide:loader" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`input > renders with name correctly 1`] = `
"<div data-slot="root" class=""><input type="text" name="name" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant ghost highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant none correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant none highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant outline correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant outline highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant soft correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant soft highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with neutral variant subtle highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with placeholder correctly 1`] = `
"<div data-slot="root" class=""><input type="text" placeholder="Search..." data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant ghost correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant ghost highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant none correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant none highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant outline highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant soft highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with primary variant subtle highlight correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with required correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" required="" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with size lg correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with size md correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with size sm correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with size xl correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with size xs correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with trailing and icon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`input > renders with trailing slot correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span>
</div>"
`;

exports[`input > renders with trailingIcon correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" autocomplete="off">
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`input > renders with type correctly 1`] = `
"<div data-slot="root" class=""><input type="password" data-slot="base" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`input > renders with ui correctly 1`] = `
"<div data-slot="root" class=""><input type="text" data-slot="base" class="rounded-full" autocomplete="off">
  <!--v-if-->
  <!--v-if-->
</div>"
`;
